introduced data object RoomData